--- a/challenge3/webapp/levelfour/app/views/houses/detail.html.erb
+++ b/challenge3/webapp/levelfour/app/views/houses/detail.html.erb
@@ -21,6 +21,10 @@
 		</tr>
 </table>
 
+<h3>
+  Energy Data
+  <button type="button" class="btn btn-default" onClick="window.location='/energies/new/?id=<%=@house.id%>'">add</button>
+</h3>
 <table class="table table-bordered table-striped">
 	<thead>
 		<tr>
