--- a/challenge3/webapp/levelfour/app/views/energies/detail.html.erb
+++ b/challenge3/webapp/levelfour/app/views/energies/detail.html.erb
@@ -1,2 +1,27 @@
-<h1>Energies#detail</h1>
-<p>Find me in app/views/energies/detail.html.erb</p>
+<h1>
+  Energies#detail
+  <button type="button" class="btn btn-default" onClick="window.location='/energies/edit/?id=<%=@data.id%>'">edit</button>
+</h1>
+<table class="table table-bordered table-striped">
+	<thead>
+		<tr>
+			<th>ID</th>
+			<th>House ID</th>
+			<th>Label</th>
+			<th>Month</th>
+			<th>Temperature</th>
+			<th>Daylight</th>
+			<th>EnergyProduction</th>
+		</tr>
+  </thead>
+  <tr>
+    <td><%= @data.id %></td>
+    <td><%= @data.house_id %></td>
+    <td><%= @data.label %></td>
+    <td><%= "#{@data.month.year}-#{@data.month.month}" %></td>
+    <td><%= @data.temperature %></td>
+    <td><%= @data.daylight %></td>
+    <td><%= @data.energy_production %></td>
+  </tr>
+</table>
+
