--- a/challenge3/webapp/levelfour/app/views/houses/detail.html.erb
+++ b/challenge3/webapp/levelfour/app/views/houses/detail.html.erb
@@ -38,7 +38,7 @@
 		</tr>
 	</thead>
 	<% @data.each do |d| %>
-		<tr>
+    <tr data-href="/energies/detail/?id=<%= d.id %>">
 			<td><%= d.id %></td>
 			<td><%= d.house_id %></td>
 			<td><%= d.label %></td>
