--- a/challenge3/webapp/levelfour/app/views/houses/detail.html.erb
+++ b/challenge3/webapp/levelfour/app/views/houses/detail.html.erb
@@ -1,6 +1,7 @@
 <h1>
   Houses#detail
   <button type="button" class="btn btn-default" onClick="window.location='/houses/edit/?id=<%=@house.id%>'">edit</button>
+  <button type="button" class="btn btn-default" onClick="window.location='/houses/delete/?id=<%=@house.id%>'">delete</button>
 </h1>
 <table class="table table-bordered table-striped">
 	<thead>
