--- a/challenge3/webapp/levelfour/app/views/energies/detail.html.erb
+++ b/challenge3/webapp/levelfour/app/views/energies/detail.html.erb
@@ -1,7 +1,7 @@
 <h1>
   Energies#detail
   <button type="button" class="btn btn-default" onClick="window.location='/energies/edit/?id=<%=@data.id%>'">edit</button>
-  <button type="button" class="btn btn-default" onClick="window.location='/energies/delete/?id=<%=@data.id%>'">delete</button>
+  <button type="button" class="btn btn-default btn-delete" data-href="/energies/delete/?id=<%=@data.id%>">delete</button>
 </h1>
 <table class="table table-bordered table-striped">
 	<thead>
