--- a/challenge3/webapp/levelfour/app/views/energies/index.html.erb
+++ b/challenge3/webapp/levelfour/app/views/energies/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Energies#index</h1>
-<%= high_chart("city", @graph) %>
+<%= high_chart("city", @graph1) %>
+<%= high_chart("num_of_people", @graph2) %>
