--- a/challenge3/webapp/levelfour/app/views/houses/index.html.erb
+++ b/challenge3/webapp/levelfour/app/views/houses/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Houses#index</h1>
 <%= high_chart("sample1", @temperature) %>
+<%= @regression1 %>
 <%= high_chart("sample2", @daylight) %>
-<%= @regression %>
+<%= @regression2 %>
