--- a/challenge4/webapp/sakuma/app/views/welcome/index.html.erb
+++ b/challenge4/webapp/sakuma/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Calculate Energy Charge</h1>
+<h1>Calculate Energy Charge --- JSON API</h1>
 
-<% # TODO: usage %>
+<%= render partial: 'charges/usage' %>
