--- a/challenge3/webapp/yuyataki/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/yuyataki/app/views/layouts/application.html.erb
@@ -2,7 +2,12 @@
 <html>
 <head>
   <title>Sample</title>
+  <%= Gon::Base.render_data({}) %>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag(
+    "https://www.google.com/jsapi?autoload=
+    { 'modules': [{ 'name': 'visualization','version': '1.1','packages': ['corechart'] }]}"
+  ) %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
