remove turbolink to draw graph

--- a/challenge3/webapp/matsumoto/app/views/energies/index.html.slim
+++ b/challenge3/webapp/matsumoto/app/views/energies/index.html.slim
@@ -1,4 +1,6 @@
 h1 Listing energies
+h2 = link_to "Cities Scatter Plot Graph", cities_energies_path, {'data-no-turbolink' => true}
+h2 = link_to "Houses Persons Pie Graph", houses_energies_path, {'data-no-turbolink' => true}
 table
   thead
     tr
