--- a/challenge3/webapp/yuichi_moriya/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/yuichi_moriya/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YuichiMoriya</title>
+    <title>Energies</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
