--- a/challenge3/webapp/m_murotani/chart_example/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/m_murotani/chart_example/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js' %>
+    <%= javascript_include_tag 'https://code.jquery.com/jquery-3.3.1.js' %>
+
+
   </head>
 
   <body>
