--- a/challenge3/webapp/hnishioka/app/views/house_energy_usages/index.html.erb
+++ b/challenge3/webapp/hnishioka/app/views/house_energy_usages/index.html.erb
@@ -1,13 +1,16 @@
-<h1>家庭エネルギー使用量 一覧</h1>
-<table>
-  <tr>
-    <th></th>
-    <th>Firstname</th>
-    <th>Lastname</th>
-    <th>City</th>
-    <th>num_of_people</th>
-    <th>has_child</th>
-  </tr>
-  <%= render partial: 'house_energy_usages/index/house_energy_usage',
-             collection: @house_energy_usages %>
-</table>
+<div class="container">
+  <h1>登録家庭一覧</h1>
+  <table>
+    <tr>
+      <th>ID</th>
+      <th>Firstname</th>
+      <th>Lastname</th>
+      <th>City</th>
+      <th>num_of_people</th>
+      <th>has_child</th>
+      <th></th>
+    </tr>
+    <%= render partial: 'house_energy_usages/index/house_energy_usage',
+      collection: @house_energy_usages %>
+  </table>
+</div>
