--- a/challenge3/webapp/hnishioka/app/views/house_energy_usages/index/_house_energy_usage.html.erb
+++ b/challenge3/webapp/hnishioka/app/views/house_energy_usages/index/_house_energy_usage.html.erb
@@ -3,7 +3,7 @@
   <td><%= house_energy_usage.firstname %></td>
   <td><%= house_energy_usage.lastname %></td>
   <td><%= house_energy_usage.city %></td>
-  <td><%= house_energy_usage.num_of_people %></td>
+  <td class="number-cell"><%= house_energy_usage.num_of_people %></td>
   <td><%= boolean_decorator(house_energy_usage.has_child) %></td>
-  <td><%= link_to 'エネルギー使用量を見る', house_energy_usage_path(house_energy_usage) %></td>
+  <td><%= link_to 'データを見る', house_energy_usage_path(house_energy_usage) %></td>
 </tr>
