--- a/challenge3/webapp/hnishioka/app/views/house_energy_usages/show.html.erb
+++ b/challenge3/webapp/hnishioka/app/views/house_energy_usages/show.html.erb
@@ -1,12 +1,21 @@
-<h1><%= @house_energy_usage.firstname %> <%= @house_energy_usage.lastname %>さんのエネルギー使用量</h1>
-<table>
-  <tr>
-    <th>Year</th>
-    <th>Month</th>
-    <th>Temperature</th>
-    <th>Daylight</th>
-    <th>EnergyProduction</th>
-  </tr>
-  <%= render partial: 'house_energy_usages/show/energy_production',
-             collection: @house_energy_usage.energy_productions %>
-</table>
+<div class="container">
+  <h1><%= @house_energy_usage.firstname %> <%= @house_energy_usage.lastname %>さんのエネルギー発電量</h1>
+
+  <div clas="chart_area">
+    <canvas id="energy-production-chart"></canvas>
+  </div>
+
+  <table>
+    <tr>
+      <th>Year</th>
+      <th>Month</th>
+      <th>Temperature</th>
+      <th>Daylight</th>
+      <th>EnergyProduction</th>
+    </tr>
+    <%= render partial: 'house_energy_usages/show/energy_production',
+      collection: @house_energy_usage.energy_productions %>
+  </table>
+  <%= link_to '一覧へ戻る', root_path, class: 'return-link-button' %>
+</div>
+<%= javascript_tag "energyProductionChart()" %>
