--- a/challenge3/webapp/hnishioka/app/views/house_energy_usages/show/_energy_production.html.erb
+++ b/challenge3/webapp/hnishioka/app/views/house_energy_usages/show/_energy_production.html.erb
@@ -1,8 +1,8 @@
 <tr>
-  <td><%= energy_production.year %></td>
-  <td><%= energy_production.month %></td>
-  <td><%= energy_production.temperature %></td>
-  <td><%= energy_production.daylight %></td>
-  <td><%= energy_production.energy_production %></td>
+  <td class="number-cell"><%= energy_production.year %></td>
+  <td class="number-cell"><%= energy_production.month %></td>
+  <td class="number-cell"><%= energy_production.temperature %></td>
+  <td class="number-cell"><%= energy_production.daylight %></td>
+  <td class="number-cell"><%= energy_production.energy_production %></td>
 </tr>
 
