--- a/challenge3/webapp/hiroaki_terayama/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/hiroaki_terayama/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <% unless controller.controller_path.include?('home') %>
+      <%= render 'shared/header' %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
