display data to energy/index.html

--- a/challenge3/webapp/ryuta_t/app/views/energies/index.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/energies/index.html.erb
@@ -1,2 +1,37 @@
-<h1>Energies#index</h1>
-<p>Find me in app/views/energies/index.html.erb</p>
+<h1>Energy Data</h1>
+
+<table style="text-align: center; margin: auto; border: 5px solid #1a1a1a">
+  <caption>Energy Data List</caption>
+
+  <thead>
+  <tr>
+    <th>Label</th>
+    <th>House ID</th>
+    <th>Year</th>
+    <th>Month</th>
+    <th>Temperature</th>
+    <th>Daylight</th>
+    <th>Energy Production</th>
+    <th>Detail</th>
+    <th>Edit</th>
+    <th>Delete</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @energies.each do |energy| %>
+    <tr>
+      <td><%= energy.label %></td>
+      <td><%= energy.house_id %></td>
+      <td><%= energy.year %></td>
+      <td><%= energy.month %></td>
+      <td><%= energy.temperature %></td>
+      <td><%= energy.daylight %></td>
+      <td><%= energy.energy_production %></td>
+      <td><%= link_to "detail", energy %></td>
+      <td><%= link_to "edit", energy %></td>
+      <td><%= link_to "delete", energy, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
