modify energies/houses index.html.erb

--- a/challenge3/webapp/ryuta_t/app/views/energies/index.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/energies/index.html.erb
@@ -1,5 +1,8 @@
 <h1>Energy Data</h1>
 
+<%= link_to "Houses Data List", houses_path %><br/>
+<%= link_to "Add New Energy Data", new_energy_path %>
+
 <table style="text-align: center; margin: auto; border: 5px solid #1a1a1a">
   <caption>Energy Data List</caption>
 
