--- a/challenge3/webapp/ryuta_t/app/views/houses/index.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/houses/index.html.erb
@@ -1,4 +1,7 @@
-<h1>House Data</h1>
+<h1>Houses Data List</h1>
+
+<%= link_to "Energies Data List", energies_path %><br/>
+<%= link_to "Add New House Data", new_house_path %>
 
 <table style="text-align: center; margin: auto; border: 5px solid #1a1a1a">
   <caption>House Data List</caption>
