--- a/challenge3/webapp/ryuta_t/app/views/houses/show.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/houses/show.html.erb
@@ -27,3 +27,28 @@
   </tr>
   </tbody>
 </table>
+
+<table style="text-align: center; margin: auto; border: 5px solid #1a1a1a">
+  <caption>House Data List Details</caption>
+  <thead>
+  <tr>
+    <th>Year</th>
+    <th>Month</th>
+    <th>Temperature</th>
+    <th>Daylight</th>
+    <th>EnergyProduction</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @house.energies.each do |house| %>
+    <tr>
+      <td><%= house.year %></td>
+      <td><%= house.month %></td>
+      <td><%= house.temperature %></td>
+      <td><%= house.daylight %></td>
+      <td><%= house.energy_production %></td>
+    </tr>
+  <% end %>
+  </tbody>
+</table>
