Modify houses/show to add chart

--- a/challenge3/webapp/ryuta_t/app/views/houses/show.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/houses/show.html.erb
@@ -28,6 +28,8 @@
   </tbody>
 </table>
 
+<%= render 'charts/house_chart' %>
+
 <table style="text-align: center; margin: auto; border: 5px solid #1a1a1a">
   <caption>House Data List Details</caption>
   <thead>
