--- a/challenge3/webapp/ryuta_t/app/views/energies/index.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/energies/index.html.erb
@@ -3,40 +3,5 @@
 <%= link_to "Houses Data List", houses_path %><br/>
 <%= link_to "Add New Energy Data", new_energy_path %>
 
-<%= render 'charts/energy_index_chart' %>
-
-<table style="text-align: center; margin: auto; border: 5px solid #1a1a1a">
-  <caption>Energy Data List</caption>
-
-  <thead>
-  <tr>
-    <th>Label</th>
-    <th>House ID</th>
-    <th>Year</th>
-    <th>Month</th>
-    <th>Temperature</th>
-    <th>Daylight</th>
-    <th>Energy Production</th>
-    <th>Show</th>
-    <th>Edit</th>
-    <th>Delete</th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @energies.each do |energy| %>
-    <tr>
-      <td><%= energy.label %></td>
-      <td><%= energy.house_id %></td>
-      <td><%= energy.year %></td>
-      <td><%= energy.month %></td>
-      <td><%= energy.temperature %></td>
-      <td><%= energy.daylight %></td>
-      <td><%= energy.energy_production %></td>
-      <td><%= link_to "show", energy %></td>
-      <td><%= link_to "edit", edit_energy_path(energy) %></td>
-      <td><%= link_to "delete", energy, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<%= render partial: 'charts/energy_index_chart', locals: { energies: @energies} %>
+<%= render partial: 'tables/energy_index_table', locals: { energies: @energies} %>
