--- a/challenge3/webapp/ryuta_t/app/views/tables/_house_show_table.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/tables/_house_show_table.html.erb
@@ -1,5 +1,5 @@
 <table style="text-align: center; margin: auto; border: 5px solid #1a1a1a">
-  <caption>House Data List</caption>
+  <caption>House Data</caption>
 
   <thead>
   <tr>
