--- a/challenge3/webapp/ryuta_t/app/views/houses/index.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/houses/index.html.erb
@@ -1,6 +1,7 @@
-<h1>Houses Data List</h1>
+<h1>House Data List</h1>
 
-<%= link_to "Energies Data List", energies_path %><br/>
+<%= link_to "Energy Data List", energies_path %><br/>
+<%= link_to "Add New Energy Data", new_energy_path %><br/>
 <%= link_to "Add New House Data", new_house_path %>
 
 <%= render partial: 'charts/house_index_chart', locals: { houses: @houses} %>
