--- a/challenge3/webapp/ryuta_t/app/views/tables/_house_data_details.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/tables/_house_data_details.html.erb
@@ -2,6 +2,8 @@
   <caption>House Data List Details</caption>
   <thead>
   <tr>
+    <th>Label</th>
+    <th>House ID</th>
     <th>Year</th>
     <th>Month</th>
     <th>Temperature</th>
@@ -13,6 +15,8 @@
   <tbody>
   <% house.energies.each do |house| %>
     <tr>
+      <td><%= house.label %></td>
+      <td><%= house.house_id %></td>
       <td><%= house.year %></td>
       <td><%= house.month %></td>
       <td><%= house.temperature %></td>
