Add kaminari to use pagination

--- a/challenge3/webapp/ryuta_t/app/views/energies/index.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/energies/index.html.erb
@@ -5,4 +5,4 @@
 <%= link_to "Add New House Data", new_house_path %>
 
 <%= render partial: 'charts/energy_index_chart', locals: { energies: @energies} %>
-<%= render partial: 'tables/energy_index_table', locals: { energies: @energies} %>
+<%= render partial: 'tables/energy_index_table', locals: { energies: @energies_pagination} %>
